updated setup instructions

--- a/notebooks/0_start_here.ipynb
+++ b/notebooks/0_start_here.ipynb
@@ -96,7 +96,7 @@
         "# Read data into a Snowpark pandas df \n",
         "from time import perf_counter\n",
         "start = perf_counter()\n",
-        "spd_df = pd.read_snowflake(\"FINANCIAL__ECONOMIC_ESSENTIALS.CYBERSYN.STOCK_PRICE_TIMESERIES\")\n",
+        "spd_df = pd.read_snowflake(\"STOCK_PRICE_TIMESERIES\")\n",
         "end = perf_counter()\n",
         "data_size = len(spd_df)\n",
         "print(f\"Took {end - start} seconds to read a table with {data_size} rows into Snowpark pandas!\")\n",
