add setup instruction link

--- a/notebooks/0_start_here.ipynb
+++ b/notebooks/0_start_here.ipynb
@@ -76,7 +76,9 @@
       },
       "source": [
         "## Reading Data from Snowflake\n",
-        "Today, we'll be analyzing the time series data from the [Cybersyn Finance and Economics dataset](https://app.snowflake.com/marketplace/listing/GZTSZAS2KF7/cybersyn-inc-financial-economic-essentials) from [Snowflake Marketplace](https://www.snowflake.com/en/data-cloud/marketplace/). Let's start by reading the `stock_price_timeseries` table into a DataFrame!\n",
+        "Today, we'll be analyzing the time series data from the [Cybersyn Finance and Economics dataset](https://app.snowflake.com/marketplace/listing/GZTSZAS2KF7/cybersyn-inc-financial-economic-essentials). You can find the instructions to setup the dataset for this tutorial [here](https://quickstarts.snowflake.com/guide/getting_started_with_pandas_on_snowflake/#1). \n",
+        "\n",
+        "Let's start by reading the `stock_price_timeseries` table into a DataFrame!\n",
         "\n",
         "Please double check that you have write permissions on the database that you initialized the Snowpark `Session` with. If you are reading from the `stock_price_timeseries` table, your `Session` needs to be configured to use a different database that you have write permissions on. The cell below uses the fully qualified name of the table to ensure that the read succeeds even though the `Session` is configured to use a different database."
       ]
