--- a/notebooks/0_start_here.ipynb
+++ b/notebooks/0_start_here.ipynb
@@ -64,7 +64,12 @@
       "source": [
         "# Access current Snowpark session\n",
         "from snowflake.snowpark.context import get_active_session\n",
-        "session = get_active_session()"
+        "session = get_active_session()\n",
+        "# Add a query tag to the session for troubleshooting and monitoring\n",
+        "session.query_tag = {\"origin\":\"sf_sit-is\", \n",
+        "                     \"name\":\"notebook_demo_pack\", \n",
+        "                     \"version\":{\"major\":1, \"minor\":0},\n",
+        "                     \"attributes\":{\"is_quickstart\":1, \"source\":\"notebook\", \"vignette\":\"snowpark_pandas\"}}"
       ]
     },
     {
@@ -407,7 +412,7 @@
         "Now we want to apply the absolute value square root on each value in the series. \n",
         "Snowpark pandas supports `apply`, which applies some arbitrary user-defined Python function along a particular axis of the DataFrame or Series. \n",
         "\n",
-        "The Python function is serialized into Python bytecode and run this as a UDF inside Snowpark\u2019s Python secure sandbox runtime environment. Snowpark's Python runtime environment is seamlessly integrated with the Anaconda package manager so that users can leverage their favorite third-party packages such as NumPy for flexible data transformation within their dataframe apply. \n",
+        "The Python function is serialized into Python bytecode and run this as a UDF inside Snowpark’s Python secure sandbox runtime environment. Snowpark's Python runtime environment is seamlessly integrated with the Anaconda package manager so that users can leverage their favorite third-party packages such as NumPy for flexible data transformation within their dataframe apply. \n",
         "\n",
         "**Pro Tip:** While calling `apply` is convenient, since the underlying implementation are UDF or UDTFs, it may not be as optimized as SQL queries transpiled from other Snowpark pandas queries. If the function applied has an equivalent dataframe or series operation, we recommend using those operations instead. For example, instead of `df.groupby('col1').apply('sum')`, directly call `df.groupby('col1').sum()`."
       ]
