--- a/notebooks/0_start_here.ipynb
+++ b/notebooks/0_start_here.ipynb
@@ -67,7 +67,7 @@
         "session = get_active_session()\n",
         "# Add a query tag to the session for troubleshooting and monitoring\n",
         "session.query_tag = {\"origin\":\"sf_sit-is\", \n",
-        "                     \"name\":\"notebook_demo_pack\", \n",
+        "                     \"name\":\"pandas_on_snowflake\", \n",
         "                     \"version\":{\"major\":1, \"minor\":0},\n",
         "                     \"attributes\":{\"is_quickstart\":1, \"source\":\"notebook\", \"vignette\":\"snowpark_pandas\"}}"
       ]
